fixed player box clipping the top

--- a/public/homepage.css
+++ b/public/homepage.css
@@ -37,8 +37,8 @@
 
 .players {
     border-radius: 30px;
-    width: 19vh;
-    height: 19vh;
+    width: 18vh;
+    height: 18vh;
     margin-top: 20px;
     display: flex;
     justify-content: center;
